pequenas mudanças na doc API
