# src/swagger.json
@@ -6,7 +6,7 @@
         "contact": {
             "email": "cleiton@gmail.com"
         },
-        "swagger": "2.0"
+        "version": "1.0"
     },
     "servers": [
         {
@@ -15,7 +15,7 @@
         }
     ],
     "paths": {
-        "/user/create": {
+        "/user/criar": {
             "post": {
                 "summary": "Create a new user",
                 "description": "Route responsible for creating a new user",
@@ -29,7 +29,7 @@
                                 "$ref": "#/components/schemas/User"
                             },
                             "examples": {
-                                "Users": {
+                                "User": {
                                     "value": {
                                         "nome": "Cleitin",
                                         "username": "cleis",
@@ -647,7 +647,7 @@
             "User": {
                 "type": "object",
                 "properties": {
-                    "name": {
+                    "nome": {
                         "type": "string"
                     },
                     "username": {
@@ -656,10 +656,10 @@
                     "email": {
                         "type": "string"
                     },
-                    "password": {
+                    "senha": {
                         "type": "string"
                     },
-                    "avatar": {
+                    "foto": {
                         "type": "string"
                     },
                     "background": {
@@ -673,13 +673,13 @@
                     "user": {
                         "type": "string"
                     },
-                    "banner": {
-                        "type": "string"
-                    },
                     "title": {
                         "type": "string"
                     },
                     "text": {
+                        "type": "string"
+                    },
+                    "banner": {
                         "type": "string"
                     },
                     "likes": {
